SPRING FRAMEWORK CHANGELOG
===========================
http://www.springsource.org


Changes in version 3.2 M2 (2012-08-xx)
--------------------------------------

* spring-test module now depends on junit:junit-dep (SPR-6966)
* now inferring return type of parameterized factory methods (SPR-9493)
* now using BufferedInputStream in SimpleMetaDataReader to double performance (SPR-9528)
* introduced "repeatCount" property in Quartz SimpleTriggerFactoryBean (SPR-9521)
* introduced "jtaTransactionManager" property in Hibernate 4 LocalSessionFactoryBean/Builder (SPR-9480)
* now raising RestClientException instead of IllegalArgumentException for unknown status codes
* introduced JacksonObjectMapperFactoryBean for configuring a Jackson ObjectMapper in XML
* introduced ContentNegotiationManager/ContentNegotiationStrategy for resolving requested media types
* introduced support for the HTTP PATCH method in Spring MVC and RestTemplate (SPR-7985)
* enabled smart suffix pattern matching in @RequestMapping methods (SPR-7632)
* DispatcherPortlet no longer forwards event exceptions to the render phase by default (SPR-9287)
* introduced "defaultCharset" property in StringHttpMessageConverter (SPR-9487)
* introduced @ExceptionResolver annotation for detecting classes with @ExceptionHandler methods
* moved RSS/Atom message converter registration ahead of jackson/jaxb2
* now handling BindException in DefaultHandlerExceptionResolver
* DeferredResult type is now parameterized
* now using reflection to instantiate StandardServletAsyncWebRequest
* fixed issue with forward before async request processing
* introduced exclude patterns for mapped interceptors in MVC namespace and MVC Java config
* introduced support for content negotiation options in MVC namespace and MVC Java config
* introduced support for named dispatchers in MockServletContext (SPR-9587)
* introduced support for single, unqualified tx manager in the TestContext framework (SPR-9645)